--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,9 +1,9 @@
 $blue: rgb(0, 53, 128);
-$green: #87C44D;
+$blue-button: #248AD4;
+$border-gray:#e0e0e0;
 $black: #424244;
 $gray: #BDBDBD;
-$border-gray:#F1F1F1;
-$text-gray:#a6a6a6;
+$text-gray:#383838;
 $blue-text:#296275;
 $green:#76cc4e;
 $yellow:#FEBB02;
