--- a/scss/styles.css
+++ b/scss/styles.css
@@ -3,7 +3,7 @@ body {
   min-width: 400px;
   margin: 0px;
   padding: 0px;
-  padding-bottom: 500px;
+  padding-bottom: 1000px;
 }
 
 body div.st-header {
@@ -65,6 +65,12 @@ body div.st-header div.st-top input.st-import {
   font-size: 12px;
   padding: 8px 11px;
   font-weight: 700;
+}
+
+@media (max-width: 650px) {
+  body div.st-header div.st-top input.st-import {
+    display: none;
+  }
 }
 
 body div.st-header div.st-top img.st-flag {
@@ -347,17 +353,16 @@ body div.st-images {
 body div.st-images div.st-image-holder {
   width: 100%;
   max-width: 1100px;
+  min-width: 650px;
   position: relative;
   float: left;
 }
 
 body div.st-images div.st-image-holder div.st-first {
-  width: calc(50% - 4px);
-  margin-right: 8px;
-}
-
-body div.st-images div.st-image-holder div.st-first img.st-sankt {
-  width: 100%;
+  width: calc(50% - 10px);
+  background: url(/img/peterburg.jpg);
+  margin-right: 10px;
+  height: 340px;
   float: left;
   border-radius: 5px;
 }
@@ -371,6 +376,7 @@ body div.st-images div.st-image-holder div.st-first p.st-title {
   font-size: 28px;
   font-weight: 700;
   text-shadow: 1px 1px black;
+  width: calc(50% - 62px);
 }
 
 body div.st-images div.st-image-holder div.st-first p.st-title img {
@@ -383,7 +389,9 @@ body div.st-images div.st-image-holder div.st-first p.st-objects {
   position: absolute;
   color: white;
   top: 49px;
+  width: calc(50% - 32px);
   left: 25px;
+  text-shadow: 1px 1px black;
 }
 
 body div.st-images div.st-image-holder div.st-first p.st-objects span {
@@ -395,18 +403,24 @@ body div.st-images div.st-image-holder div.st-first p.st-check {
   background-color: #e9f0fa;
   margin: 0px;
   position: absolute;
-  width: calc(50% - 14px);
-  bottom: 41px;
+  width: calc(50% - 20px);
+  bottom: 37px;
   font-weight: 700;
   font-size: 14px;
   padding: 0px 5px;
 }
 
-body div.st-images div.st-image-holder div.st-first p.st-suggestion {
+body div.st-images div.st-image-holder div.st-first div.st-suggestion {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr 1fr;
+      grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: 5px;
   background-color: white;
   position: absolute;
-  width: calc(50% - 98px);
-  bottom: 4px;
+  width: calc(50% - 22px);
+  padding: 10px 5px 5px;
+  bottom: 0px;
   margin: 0px;
   height: 20px;
   line-height: 20px;
@@ -414,44 +428,61 @@ body div.st-images div.st-image-holder div.st-first p.st-suggestion {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   font-weight: 400;
-  padding: 10px 87px 5px 5px;
   font-size: 14px;
   text-align: center;
 }
 
-body div.st-images div.st-image-holder div.st-first p.st-suggestion span.st-date {
+body div.st-images div.st-image-holder div.st-first div.st-suggestion p.st-date {
+  margin: 0px;
+  text-align: left;
   color: blue;
   text-decoration: underline;
-  float: left;
+  min-width: 87px;
 }
 
-body div.st-images div.st-image-holder div.st-first i {
-  position: absolute;
-  left: calc(50% - 30px);
-  bottom: 12px;
+body div.st-images div.st-image-holder div.st-first div.st-suggestion p.st-room {
+  margin: 0px;
+  text-align: center;
+  font-size: 14px;
+  min-width: 150px;
+}
+
+body div.st-images div.st-image-holder div.st-first div.st-suggestion i {
+  text-align: right;
   color: blue;
+}
+
+body div.st-images div.st-image-holder div.st-first div.st-icon-holder {
+  position: absolute;
+  right: calc(50% + 20px);
+  top: 10px;
+  color: white;
 }
 
 body div.st-images div.st-image-holder div.st-second {
   float: left;
-  width: calc(50% - 4px);
-  margin-left: 8px;
+  width: calc(50% - 10px);
+  margin-left: 10px;
+  border-radius: 5px;
+  height: 340px;
+  background: url(/img/moskva.png);
 }
 
-body div.st-images div.st-image-holder div.st-second img.st-moskva {
-  border-radius: 5px;
-  width: 100%;
+body div.st-images div.st-image-holder div.st-second img.st-icon {
+  width: 28px;
+  height: 28px;
 }
 
 body div.st-images div.st-image-holder div.st-second p.st-title {
   position: absolute;
   top: 25px;
-  left: calc(50% + 25px);
+  left: calc(50% + 27px);
   margin: 0px;
   color: white;
   font-size: 28px;
   font-weight: 700;
   text-shadow: 1px 1px black;
+  width: calc(50% - 62px);
 }
 
 body div.st-images div.st-image-holder div.st-second p.st-title img {
@@ -464,6 +495,161 @@ body div.st-images div.st-image-holder div.st-second p.st-objects {
   position: absolute;
   color: white;
   top: 49px;
-  left: calc(50% + 25px);
+  left: calc(50% + 27px);
+  width: calc(50% - 32px);
+  text-shadow: 1px 1px black;
+}
+
+body div.st-images div.st-image-holder div.st-second p.st-average-price {
+  background-color: #383838;
+  margin: 0px;
+  width: 76px;
+  font-size: 12px;
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  padding: 4px 6px;
+  border-radius: 3px;
+  text-align: right;
+  color: white;
+}
+
+body div.st-images div.st-image-holder div.st-second p.st-average-price span.st-price {
+  font-size: 16px;
+}
+
+body div.st-images div.st-image-holder div.st-second div.st-icon-holder {
+  position: absolute;
+  right: 20px;
+  color: white;
+  top: 10px;
+}
+
+body div.st-images div.st-second-row {
+  width: 100%;
+  max-width: 1100px;
+  min-width: 670px;
+  display: -ms-grid;
+  display: grid;
+  float: left;
+  margin: 15px 0 40px;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
+  position: relative;
+  height: 272px;
+}
+
+body div.st-images div.st-second-row div.st-image {
+  position: relative;
+}
+
+body div.st-images div.st-second-row div.st-image img.st-icon {
+  width: 28px;
+  height: 28px;
+}
+
+body div.st-images div.st-second-row div.st-image p.st-title {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  margin: 0px;
+  color: white;
+  font-size: 28px;
+  font-weight: 700;
+  text-shadow: 1px 1px black;
+}
+
+body div.st-images div.st-second-row div.st-image p.st-title img {
+  height: 18px;
+  width: 18px;
+}
+
+body div.st-images div.st-second-row div.st-image p.st-objects-number {
+  position: absolute;
+  left: 25px;
+  top: 45px;
+  text-shadow: 1px 1px black;
+  color: white;
+  font-size: 16px;
+}
+
+body div.st-images div.st-second-row div.st-image p.st-price {
+  background-color: #383838;
+  margin: 0px;
+  width: 85px;
+  font-size: 12px;
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  padding: 4px 6px;
+  border-radius: 3px;
+  text-align: right;
+  color: white;
+}
+
+body div.st-images div.st-second-row div.st-image p.st-price span {
+  font-size: 16px;
+}
+
+body div.st-images div.st-second-row div.st-image i {
+  color: white;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+}
+
+body div.st-images div.st-second-row div.st-first {
+  background: url(/img/kiev.jpg);
+}
+
+body div.st-images div.st-second-row div.st-second {
+  background: url(/img/riga.jpg);
+}
+
+body div.st-images div.st-second-row div.st-third {
+  background: url(/img/helsinki.jpg);
+}
+
+body div.st-accommodation {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0px auto;
+}
+
+body div.st-accommodation p.st-title {
+  font-size: 24px;
+  color: #383838;
+  float: left;
+  font-weight: 700;
+  margin: 0px 0px 16px;
+}
+
+body div.st-accommodation div.st-sorts {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  height: 300px;
+  grid-gap: 16px;
+  float: left;
+  width: 100%;
+}
+
+body div.st-accommodation div.st-sorts div.st-type img {
+  height: 207px;
+  width: 100%;
+}
+
+body div.st-accommodation div.st-sorts div.st-type p.st-type {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 16px 0 0;
+}
+
+body div.st-accommodation div.st-sorts div.st-type p.st-ammount {
+  color: #707070;
+  font-size: 12px;
+  margin: 0 0 16px;
 }
 /*# sourceMappingURL=styles.css.map */
