--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,9 +1,9 @@
 $blue: rgb(0, 53, 128);
 $blue-button: #248AD4;
+$mark-blue:#003580;
 $border-gray:#e0e0e0;
 $black: #383838;
 $gray: #BDBDBD;
 $text-gray:#383838;
-$blue-text:#296275;
 $green:#76cc4e;
 $yellow:#FEBB02;
