--- a/scss/styles.css
+++ b/scss/styles.css
@@ -471,6 +471,7 @@ body div.st-images div.st-image-holder div.st-second {
 body div.st-images div.st-image-holder div.st-second img.st-icon {
   width: 28px;
   height: 28px;
+  border-top-left-radius: 5px;
 }
 
 body div.st-images div.st-image-holder div.st-second p.st-title {
@@ -542,11 +543,13 @@ body div.st-images div.st-second-row {
 
 body div.st-images div.st-second-row div.st-image {
   position: relative;
+  border-radius: 5px;
 }
 
 body div.st-images div.st-second-row div.st-image img.st-icon {
   width: 28px;
   height: 28px;
+  border-top-left-radius: 5px;
 }
 
 body div.st-images div.st-second-row div.st-image p.st-title {
@@ -639,6 +642,7 @@ body div.st-accommodation div.st-sorts {
 body div.st-accommodation div.st-sorts div.st-type img {
   height: 207px;
   width: 100%;
+  border-radius: 5px;
 }
 
 body div.st-accommodation div.st-sorts div.st-type p.st-type {
@@ -651,5 +655,112 @@ body div.st-accommodation div.st-sorts div.st-type p.st-ammount {
   color: #707070;
   font-size: 12px;
   margin: 0 0 16px;
+}
+
+body div.st-accommodation div.st-private-rooms p.st-title {
+  font-size: 24px;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers {
+  max-width: 1100px;
+  width: 100%;
+  height: 356px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  position: relative;
+  grid-gap: 16px;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div {
+  position: relative;
+  min-width: 0;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div img {
+  max-width: 100%;
+  height: 240px;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-name {
+  color: #383838;
+  margin: 8px 0 0 0;
+  max-width: 100%;
+  font-size: 14px;
+  position: absolute;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  z-index: 3;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-name:hover {
+  border: 1px solid #eee;
+  padding: 2px;
+  white-space: normal;
+  word-break: break-word;
+  z-index: 5;
+  background-color: #eee;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-location {
+  color: #707070;
+  font-size: 14px;
+  margin: 0;
+  position: absolute;
+  top: 267px;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-price {
+  margin: 8px 0 0;
+  font-size: 14px;
+  position: absolute;
+  top: 279px;
+  font-weight: 600;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score {
+  top: 296px;
+  position: absolute;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score span.st-mark {
+  background-color: #003580;
+  color: white;
+  padding: 4px;
+  border-radius: 6px 6px 6px 0px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score span.st-desc {
+  color: #003580;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score span.st-rec-num {
+  color: #707070;
+  height: 40px;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: -24px;
+  left: 80px;
+  text-align: right;
+  font-size: 12px;
+}
+
+@media (max-width: 744px) {
+  body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score span.st-rec-num {
+    bottom: -14px;
+    width: 50px;
+    text-align: left;
+    left: 95px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
