--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   min-width: 400px;
   margin: 0px;
   padding: 0px;
@@ -130,7 +130,7 @@ body div.st-search {
   height: -moz-fit-content;
   height: fit-content;
   min-height: 260px;
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   margin: 0px;
 }
 
@@ -247,7 +247,7 @@ body div.st-search div.st-search-content div.st-search-btn input.st-input {
   height: 62px;
   font-size: 20px;
   color: white;
-  background-color: #006BB8;
+  background-color: #006bb8;
   min-width: 75px;
   overflow: hidden;
 }
@@ -762,5 +762,169 @@ body div.st-accommodation div.st-private-rooms div.st-offers div p.st-score span
     text-align: left;
     left: 95px;
   }
+}
+
+body div.st-register {
+  width: calc(100% - 2px);
+  max-width: 1100px;
+  margin: 24px auto 32px;
+  border: 1px solid #e0e0e0;
+  position: relative;
+  height: 164px;
+}
+
+body div.st-register img {
+  padding: 24px;
+  float: left;
+}
+
+body div.st-register p.st-main {
+  float: left;
+  width: calc(100% - 150px);
+  font-size: 16px;
+  font-weight: 700;
+  margin: 24px 0 8px;
+}
+
+body div.st-register p.st-prices {
+  float: left;
+  width: calc(100% - 150px);
+  margin: 0 0 20px;
+}
+
+body div.st-register input {
+  float: left;
+  width: 50%;
+  padding: 9px;
+}
+
+body div.st-register button {
+  float: left;
+  width: 100px;
+  background-color: white;
+  height: 37px;
+  line-height: 37px;
+  text-align: center;
+  color: #248AD4;
+  margin-left: 8px;
+  border: 1px solid #248AD4;
+}
+
+body div.st-popular-destination {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0px auto;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 16px;
+  position: relative;
+}
+
+body div.st-popular-destination div.st-location div.st-image {
+  position: relative;
+}
+
+body div.st-popular-destination div.st-location div.st-image img {
+  width: 100%;
+}
+
+body div.st-popular-destination div.st-location div.st-image div.st-image-location {
+  padding: 16px;
+  background-image: linear-gradient(to top, black 0px, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0) 100%);
+  position: absolute;
+  bottom: 0px;
+  width: calc(100% - 32px);
+}
+
+body div.st-popular-destination div.st-location div.st-image div.st-image-location p.st-name {
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0px;
+}
+
+body div.st-popular-destination div.st-location div.st-image div.st-image-location p.st-country {
+  color: white;
+  margin: 0px;
+}
+
+body div.st-popular-destination div.st-location p.st-available {
+  margin-top: 13px;
+  text-decoration: underline;
+  color: #0077cc;
+  font-size: 14px;
+}
+
+body p.st-more-destination {
+  color: #0077cc;
+  text-decoration: underline;
+  max-width: 1100px;
+  width: 100%;
+  text-align: right;
+  margin: 0px auto;
+  font-weight: 700;
+  font-size: 13px;
+}
+
+body div.st-favorite-destinations {
+  margin: 32px 0 16px;
+}
+
+body div.st-favorite-destinations p.st-title {
+  font-size: 24px;
+  max-width: 1100px;
+  width: 100%;
+  margin: 0px auto;
+  font-weight: 700;
+}
+
+body div.st-favorite-destinations div.st-chosse-type {
+  max-width: 1100px;
+  margin: 28px auto 0px;
+  border-bottom: 1px solid #0077cc;
+}
+
+body div.st-favorite-destinations span.st-selected {
+  background-color: #0077cc;
+  color: white;
+  padding: 7px 15px;
+  line-height: 30px;
+  font-size: 13px;
+}
+
+body div.st-favorite-destinations span.st-unselected {
+  color: #737373;
+  padding: 7px 15px;
+  line-height: 30px;
+  font-size: 13px;
+}
+
+body div.st-favorite-destinations table.st-destinations {
+  max-width: 1100px;
+  margin: 0px auto;
+  width: 100%;
+}
+
+body div.st-favorite-destinations table.st-destinations td {
+  width: 20%;
+}
+
+body div.st-favorite-destinations table.st-destinations td span.st-name {
+  color: #0077cc;
+  font-size: 14px;
+}
+
+body div.st-favorite-destinations table.st-destinations td span.st-number {
+  color: #737373;
+  font-size: 13px;
+}
+
+body div.st-discover {
+  font-size: 24px;
+  font-weight: 700;
+  max-width: 1100px;
+  margin: 60px auto;
 }
 /*# sourceMappingURL=styles.css.map */
